--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         </activity>
 
         <activity android:name=".presentation.ui.onboarding.view.OnBoardingActivity"/>
+        <activity android:name=".presentation.ui.account.signin.view.SignInActivity"/>
 
         <activity
             android:name=".presentation.ui.main.view.MainActivity"
