--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,10 +28,10 @@
 
         <activity android:name=".presentation.ui.onboarding.view.OnBoardingActivity"/>
         <activity android:name=".presentation.ui.account.signin.view.SignInActivity"/>
+        <activity android:name=".presentation.ui.interests.main.view.InterestsMainActivity"/>
 
         <activity
             android:name=".presentation.ui.main.view.MainActivity"
-            android:exported="true"
             android:windowSoftInputMode="adjustPan"/>
 
         <activity android:name=".presentation.common.activity.PermissionCheckActivity"/>
