--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
             android:windowSoftInputMode="adjustPan"/>
 
         <activity android:name=".presentation.common.activity.PermissionCheckActivity"/>
+        <activity android:name=".presentation.ui.webview.view.WebViewActivity"/>
 
         <provider
             android:name="androidx.startup.InitializationProvider"
