--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DefaultMercy">
+        android:theme="@style/Theme.DefaultMercy"
+        android:usesCleartextTraffic="true">
 
         <activity
             android:name=".presentation.ui.splash.view.SplashActivity"
