SurveyActivity 추가 및 연결

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
 
         <activity android:name=".presentation.common.activity.PermissionCheckActivity"/>
         <activity android:name=".presentation.ui.webview.view.WebViewActivity"/>
+        <activity android:name=".presentation.ui.survey.SurveyActivity"/>
 
         <provider
             android:name="androidx.startup.InitializationProvider"
