로그인 후 웰컴 페이지 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".presentation.common.activity.PermissionCheckActivity"/>
         <activity android:name=".presentation.ui.webview.view.WebViewActivity"/>
         <activity android:name=".presentation.ui.survey.SurveyActivity"/>
+        <activity android:name=".presentation.ui.account.welcome.view.WelcomeActivity"/>
 
         <provider
             android:name="androidx.startup.InitializationProvider"
