--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity android:name=".presentation.ui.webview.view.WebViewActivity"/>
         <activity android:name=".presentation.ui.survey.SurveyActivity"/>
         <activity android:name=".presentation.ui.account.welcome.view.WelcomeActivity"/>
+        <activity android:name=".presentation.ui.survey.complete.view.SurveyCompleteActivity"/>
 
         <provider
             android:name="androidx.startup.InitializationProvider"
